fix index info compare bug